--- a/views/sale_order.xml
+++ b/views/sale_order.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="//field[@name='payment_term_id']" postion="after">
+                    <xpath expr="//field[@name='payment_term_id']" position="after">
                         <field name="sale_description"/>
                     </xpath>
                 </data>
@@ -20,7 +20,7 @@
             <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="//field[@name='partner_id']" postion="before">
+                    <xpath expr="//field[@name='partner_id']" position="before">
                         <field name="sale_description"/>
                     </xpath>
                 </data>
